RESOLVED FIXED198669
A MediaStreamTrack cannot modify whether being a capture track or not
https://bugs.webkit.org/show_bug.cgi?id=198669
Summary A MediaStreamTrack cannot modify whether being a capture track or not
youenn fablet
Reported 2019-06-07 10:58:53 PDT
A MediaStreamTrack cannot modify whether being a capture track or not
Attachments
Patch (2.75 KB, patch)
2019-06-07 11:01 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-06-07 11:01:21 PDT
WebKit Commit Bot
Comment 2 2019-06-07 13:08:44 PDT
Comment on attachment 371600 [details] Patch Clearing flags on attachment: 371600 Committed r246212: <https://trac.webkit.org/changeset/246212>
WebKit Commit Bot
Comment 3 2019-06-07 13:08:45 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-06-07 13:09:15 PDT
Note You need to log in before you can comment on or make changes to this bug.